--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,8 +23,7 @@ jobs:
       - name: Deploy to VPS
         run: |
           ssh ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} "
-            pwd &&
-            cd /portifolio &&
+            cd /home/andre/portifolio
             git pull origin main &&
             make build &&
             make run
