--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,12 +22,10 @@ jobs:
 
       - name: Push image using containerd
         run: |
-          ls -la /home/andre/
+          ssh ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} "
           cd /home/andre/portifolio &&
           git pull origin main &&
           sudo ctr --namespace portfolio-namespace images build --tag andrerimes/portfolio:latest . &&
           sudo ctr --namespace portfolio-namespace images push --user ${{ secrets.DOCKER_USER }}:$${{ secrets.DOCKER_PASSWORD }} andrerimes/portfolio:latest
-
-      - name: Update Kubernetes deployment
-        run: |
           kubectl rollout status deployment portfolio-deployment -n portfolio-namespace
+          "
