--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,29 +11,29 @@ env:
   KUBE_NAMESPACE: portfolio-namespace
 
 jobs:
-  # build-and-push:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Checkout code
-  #       uses: actions/checkout@v4
+  build-and-push:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-  #     - name: Set up Docker Buildx
-  #       uses: docker/setup-buildx-action@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
-  #     - name: Log in to Docker Hub
-  #       uses: docker/login-action@v3
-  #       with:
-  #         username: ${{ secrets.DOCKER_USER }}
-  #         password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USER }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
-  #     - name: Extract metadata
-  #       id: meta
-  #       uses: docker/metadata-action@v5
-  #       with:
-  #         images: ${{ env.DOCKER_IMAGE }}
-  #         tags: |
-  #           type=sha,prefix={{branch}}-
-  #           type=raw,value=latest,enable={{is_default_branch}}
+      - name: Extract metadata
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ env.DOCKER_IMAGE }}
+          tags: |
+            type=sha,prefix={{branch}}-
+            type=raw,value=latest,enable={{is_default_branch}}
 
   #     - name: Build and push Docker image
   #       uses: docker/build-push-action@v5
@@ -54,9 +54,16 @@ jobs:
 
       - name: Connect to Tailscale
         run: |
+          echo "Auth key length: ${#TS_AUTHKEY}"
+          if [ -z "$TS_AUTHKEY" ]; then
+            echo "ERROR: TAILSCALE_AUTHKEY secret is not set!"
+            exit 1
+          fi
           curl -fsSL https://tailscale.com/install.sh | sh
-          sudo tailscale up --authkey="${{ secrets.TAILSCALE_AUTHKEY }}" --accept-routes --hostname="github-runner-${{ github.run_id }}"
+          sudo tailscale up --authkey="${TS_AUTHKEY}" --accept-routes --hostname="github-runner-${{ github.run_id }}"
           tailscale status
+        env:
+          TS_AUTHKEY: ${{ secrets.TAILSCALE_AUTHKEY }}
 
       - name: Set up kubectl
         uses: azure/setup-kubectl@v3
